# category/src/main/java/com/microservice/category/dto/CategoryDto.java
@@ -1,10 +1,0 @@
-package com.microservice.category.dto;
-
-import lombok.Data;
-
-@Data
-public class CategoryDto {
-
-    private Integer id;
-    private String name;
-}
